# Joshua

./: CURRENT_STATUS.md  README.md  complete_mad_review_package.md  relay_diagnosis.md  relay_persistence_review.md
lib/: DEPLOYMENT.md  MIGRATION_GUIDE.md  README.md  __init__.py  pyproject.toml
lib/joshua_logger/: README.md  __init__.py  logger.py
lib/joshua_network/: __init__.py  client.py  errors.py  server.py
lib/llm-client/requirements/: LLM_Client_Library_Requirements.md
lib/mad-cp/requirements/: MAD_CP_Interface_Library_Requirements.md  MAD_CP_Library_Requirements.md
lib/mcp_logger/: README.md  __init__.py  mcp_logger.py  version.py
lib/redis_logger/: README.md  __init__.py  redis_logger.py  version.py
lib/tests/: README.md  conftest.py  requirements-test.txt  test_integration.py  test_joshua_logger.py  test_joshua_network.py
libs/iccm-network/: README.md  pyproject.toml
libs/iccm-network/iccm_network/: __init__.py  client.py  server.py
mads/: README.md  (+11 more)
mads/fiedler/: .dockerignore  .env.example  BUGFIX_2025-10-02_MCP_Config.md  BUGFIX_2025-10-02_Triplet_Fixes.md  CLAUDE_CODE_INTEGRATION.md  CORRECTIONS_APPLIED.md  DOCKER_README.md  Dockerfile  README.md  SECURITY.md  SECURITY_HARDENING_APPLIED.md  TEST_RESULTS_COMPLETE.md  docker-compose.yml  pyproject.toml  run_docker_tests.sh
mads/fiedler/allowed_files/: test_attachment.txt
mads/fiedler/allowed_files/phase1_papers/: 10_LLM_Orchestra_v4.md  phase1_requirements_extraction_prompt.md
mads/fiedler/archive/development-docs/: SECURITY_FIXES_SUMMARY.md  WEBSOCKET_CONVERSION.md
mads/fiedler/docs/: AUDIO_SUPPORT_STATUS.md
mads/fiedler/fiedler/: mcp_server.py  proxy_server.py  server.py  server_joshua.py
mads/fiedler/fiedler/config/: models.yaml
mads/fiedler/fiedler/providers/: __init__.py  base.py  gemini.py  openai.py  together.py  xai.py
mads/fiedler/fiedler/tests/: run_tests.sh  test_all_models_e2e.py  test_basic.py  test_mcp_protocol.py  test_multimodal.py
mads/fiedler/fiedler/tools/: config.py  keys.py  models.py  send.py
mads/fiedler/fiedler/utils/: __init__.py  attachments.py  logger.py  package.py  paths.py  secrets.py  state.py  tokens.py
mads/fiedler/fiedler_output/: gates_triplet_consultation_package.md  playfair_code_validation_package.md  playfair_code_validation_round2.md
mads/fiedler/fiedler_output/20251002_202316_4ae33357/: gpt-4o-mini.md
mads/fiedler/fiedler_output/20251002_204202_9ea71fa1/: deepseek-ai_DeepSeek-R1.md  gemini-2.5-pro.md  summary.json
mads/fiedler/fiedler_output/20251002_204834_70d9d757/: deepseek-ai_DeepSeek-R1.md
mads/fiedler/fiedler_output/20251002_205342_a61cd465/: deepseek-ai_DeepSeek-R1.md  gpt-4o-mini.md
mads/fiedler/fiedler_output/20251003_001718_58046948/: summary.json
mads/fiedler/fiedler_output/20251003_001728_0e594522/: summary.json
mads/fiedler/fiedler_output/20251003_001734_bbc9c52d/: summary.json
mads/fiedler/fiedler_output/20251003_001736_6747acf7/: summary.json
mads/fiedler/requirements/: Fiedler_V1_Requirements.md  Fiedler_V1_Requirements_APPROVED.md
mads/fiedler/tests/: test_e2e_models.py  test_security.py
mads/fiedler/tools/: gemini_client.py
(+1039 files in other folders)
