[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joshua-network"
version = "1.0.0"
description = "Standardized WebSocket MCP server/client library for Joshua components"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
]

[tool.setuptools]
packages = ["joshua_network"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
