[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "joshua-libs"
version = "1.0.0"
description = "Standardized libraries for Joshua components: joshua_network and joshua_logger"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
]

[tool.setuptools]
packages = ["joshua_network", "joshua_logger"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
