[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iccm-network"
version = "1.1.0"
description = "Standardized MCP networking library for ICCM microservices"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ICCM Project", email = "iccm@example.com"}
]
keywords = ["mcp", "websocket", "microservices", "iccm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "websockets>=11.0,<15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/rmdevpro/ICCM"
Issues = "https://github.com/rmdevpro/ICCM/issues"
Repository = "https://github.com/rmdevpro/ICCM/tree/main/iccm-network"

[tool.setuptools.packages.find]
where = ["."]
include = ["iccm_network*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
